crates/oxc_semantic/tests/snapshots/cfg__cfg_files@template_string.js-2.snap
---
source: crates/oxc_semantic/tests/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/cfg_fixtures/template_string.js
---
digraph {
    0 [ label = "$0 = TaggedTemplateMadeWithExpressions{}"]
}

