crates/oxc_semantic/tests/snapshots/cfg__cfg_files@two_functions.js-2.snap
---
source: crates/oxc_semantic/tests/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/cfg_fixtures/two_functions.js
---
digraph {
    0 [ label = ""]
    1 [ label = "$return = Constant(<9>)"]
    2 [ label = "Unreachable()"]
    3 [ label = "$0 = Function{}"]
    4 [ label = "$return = Constant(<10>)"]
    5 [ label = "Unreachable()"]
    6 [ label = "$1 = Function{}"]
    0 -> 1 [ ]
    1 -> 2 [ ]
    0 -> 3 [ ]
    3 -> 4 [ ]
    4 -> 5 [ ]
    3 -> 6 [ ]
}

