crates/oxc_semantic/tests/snapshots/cfg__cfg_files@yield_as_statement_and_expression.js-2.snap
---
source: crates/oxc_semantic/tests/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/cfg_fixtures/yield_as_statement_and_expression.js
---
digraph {
    0 [ label = "$0 = Reference(<#Generate>)"]
    1 [ label = "$1 = Reference(<callCount>)\n$2 = Constant(<1>)\n$3 = $1 += $2\n$5 = <implicit undefined>\n$6 = yield $5()\n$4 = ArrayMadeWithExpressions[...$6]\n$7 = yield $4()"]
    2 [ label = "$8 = Function{}\n$9 = ClassMadeWithExpressions{$0, $8}"]
    0 -> 1 [ ]
    0 -> 2 [ ]
}

